--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background-image: linear-gradient(rgba(10, 25, 47, 0.8), rgba(10, 25, 47, 0.8)), url('../Images/BG.png');
+    background-image: linear-gradient(rgba(10, 25, 47, 0.8), rgba(10, 25, 47, 0.8)), url('BG.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
