--- a/login_signup.css
+++ b/login_signup.css
@@ -6,7 +6,7 @@
 
 body {
  font-family: 'Poppins', sans-serif;
- background: url('../Images/BG.png') no-repeat center center/cover;
+ background: url('../BG.png') no-repeat center center/cover;
  height: 100vh;
  display: flex;
  justify-content: center;
